[#68899668] Fix height issue for devices too short to see whole nav

--- a/www/assets/styles/wysiwyg.css
+++ b/www/assets/styles/wysiwyg.css
@@ -1429,6 +1429,10 @@ header {
         padding: 3px 0;
         text-align: center;
         font-size: 36px; }
+  @media screen and (max-height: 400px) {
+    .mobile-menu {
+      height: 100%;
+      overflow: scroll; } }
 
 footer {
   background: #F8F6F0;
